# OneSearch

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.legacy.yml  docker-compose.managed-meili.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  nginx.conf  pyproject.toml  start-backend.sh  supervisord.conf
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend-tests.yml  codeql.yml  docker-publish.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 7de02f6a9de2_initial_schema_sources_and_indexed_.py  b72305870c4f_add_users_table_for_authentication.py  d58d802ad43e_add_schedule_fields_to_sources.py  f3b8c2d1e9a4_add_app_settings_table.py
backend/app/: __init__.py  config.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  preview.py  search.py  settings.py  sources.py  status.py
backend/app/container/: __init__.py  supervisord.py
backend/app/db/: database.py
backend/app/extractors/: __init__.py  base.py  comic.py  epub.py  images.py  markdown.py  media.py  metadata.py  office.py  pdf.py  rtf.py  subtitles.py  text.py
backend/app/services/: __init__.py  app_settings.py  indexer.py  scanner.py  scheduler.py  search.py
backend/tests/: conftest.py  test_api.py  test_app_settings.py  test_auth.py  test_comic_extractor.py  test_compose_defaults.py  test_config.py  test_dockerfile.py  test_epub_extractor.py  test_extractors.py  test_image_extractor.py  test_indexer.py  test_media_extractor.py  test_meilisearch_integration.py  test_preview_api.py  test_rtf_extractor.py  test_scanner.py  test_scheduler.py  test_schemas.py  test_search_service.py  test_source_path_test_api.py  test_subtitle_extractor.py  test_supervisord_config.py
cli/: README.md  pyproject.toml
cli/onesearch/: __init__.py  api.py  banner.py  config.py  context.py  main.py
cli/onesearch/commands/: __init__.py  auth.py  config.py  search.py  source.py  status.py
cli/tests/: test_api.py  test_auth_commands.py  test_banner.py  test_config.py  test_integration_auth.py  test_main.py  test_reindex_full.py
docs/: index.md  requirements.txt
docs/about/: changelog.md  license.md  privacy-security.md  roadmap.md
docs/administration/: authentication.md  backup-restore.md  monitoring.md  troubleshooting.md
docs/api/: index.md  preview.md  search.md  settings.md  sources.md  status.md
docs/cli/: commands.md  configuration.md  examples.md  index.md  installation.md
docs/configuration/: docker-compose.md  environment-variables.md  performance-tuning.md  podman.md  volume-mounts.md
docs/development/: adding-extractors.md  architecture.md  backend-dev.md  contributing.md  frontend-dev.md  index.md  testing.md
docs/getting-started/: first-time-setup.md  index.md  installation.md  migrate-to-managed-meilisearch.md  upgrading.md
docs/supported-formats/: ebooks-comics.md  images-raw.md  index.md  markdown.md  media.md  metadata-only.md  office-documents.md  pdf.md  subtitles.md  text-files.md
docs/user-guide/: adding-sources.md  document-preview.md  index.md  indexing.md  scheduling.md  searching.md  web-interface.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminLayout.tsx  MainLayout.tsx  OneSearchLogo.tsx  ProtectedRoute.tsx
frontend/src/components/document/: FormatDetails.tsx  MetadataCards.tsx  ReadableTextRenderer.tsx  metadata.ts
frontend/src/contexts/: AuthContext.tsx  AuthContextValue.ts  SearchSettingsContext.tsx  SearchSettingsContextValue.ts  ThemeContext.tsx  ThemeContextValue.ts  searchSettings.ts  theme.ts  useAuth.ts  useSearchSettings.ts  useTheme.ts
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: DocumentPage.tsx  LoginPage.tsx  SearchPage.tsx  SetupPage.tsx
frontend/src/pages/admin/: SettingsPage.tsx  SourcesPage.tsx  StatusPage.tsx
frontend/src/types/: api.ts
scripts/: release.py
scripts/smoke/: podman-managed-meili.sh
