[project]
name = "onesearch-backend"
version = "0.5.0"
description = "OneSearch backend API server"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0,<0.200.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "meilisearch>=0.31.0",
    "pypdf>=6.6.0",
    "python-frontmatter>=1.0.0",
    "chardet>=5.2.0",
    "python-multipart>=0.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Tool config inherited from root pyproject.toml
