[project]
name = "onesearch-cli"
version = "0.3.0"
description = "CLI for OneSearch - Self-hosted, privacy-focused search"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
onesearch = "onesearch.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["onesearch"]

# Tool config inherited from root pyproject.toml
